webserver/deployment/web-deployment-v1.0.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"web-bookmark:web-bookmark-v1.0"},"fieldPath":"spec.template.spec.containers[?(@.name==\"web-bookmark\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  resourceVersion: '2158595560'
  name: web-bookmark
  uid: 5c4f41ce-1ccf-456b-8c02-4a3a6b4331a4
  creationTimestamp: '2024-04-24T19:03:38Z'
  generation: 20
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-24T19:03:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:app.kubernetes.io/part-of': {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"web-bookmark"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":5081,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":5444,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-24T19:03:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"web-bookmark"}':
                  'f:image': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-25T13:42:56Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: gresident-dev
  labels:
    app: web-bookmark
    app.kubernetes.io/component: web-bookmark
    app.kubernetes.io/instance: web-bookmark
    app.kubernetes.io/part-of: bookmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: bookmark
      deployment: web-bookmark
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: bookmark
        deployment: web-bookmark
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: web-bookmark
          image: 'quay.io/gresident/residentsystem:web-bookmark-v1.0'
          ports:
            - containerPort: 5081
              protocol: TCP
            - containerPort: 5444
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 20
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-04-24T19:03:42Z'
      lastTransitionTime: '2024-04-24T19:03:38Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "web-bookmark-655b787d57" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-04-25T13:42:56Z'
      lastTransitionTime: '2024-04-25T13:42:56Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
---
kind: Service
apiVersion: v1
metadata:
  name: web-bookmark
  namespace: gresident-dev
  uid: 3a19c887-89b5-4de3-ada6-56a76efc98ce
  resourceVersion: '2155641408'
  creationTimestamp: '2024-04-24T19:03:38Z'
  labels:
    app: web-bookmark
    app.kubernetes.io/component: web-bookmark
    app.kubernetes.io/instance: web-bookmark
    app.kubernetes.io/part-of: bookmark
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2024-04-24T19:03:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":5081,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":5444,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.183.165
  ipFamilies:
    - IPv4
  ports:
    - name: 5081-tcp
      protocol: TCP
      port: 5081
      targetPort: 5081
    - name: 5444-tcp
      protocol: TCP
      port: 5444
      targetPort: 5444
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.183.165
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/part-of: bookmark
    deployment: web-bookmark
status:
  loadBalancer: {}
