webserver/deployment/web-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web-bookmark
  namespace: gresident-dev
  uid: f1a2cb1a-28e0-4219-b742-5eaec68d1ce1
  resourceVersion: '2155641487'
  creationTimestamp: '2024-04-24T19:03:40Z'
  labels:
    app: web-bookmark
    app.kubernetes.io/component: web-bookmark
    app.kubernetes.io/instance: web-bookmark
    app.kubernetes.io/part-of: bookmark
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-04-24T19:03:40Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-04-24T19:03:40Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: web-bookmark-gresident-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
  to:
    kind: Service
    name: web-bookmark
    weight: 100
  port:
    targetPort: 5444
  tls:
    termination: passthrough
  wildcardPolicy: None
status:
  ingress:
    - host: web-bookmark-gresident-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-04-24T19:03:40Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.sandbox-m3.1530.p1.openshiftapps.com
